# eyeTracker-zms

./: .dir-locals.el  .envrc  .flake8  .gitignore  AVoriginal.py  AVrecordeR.py  Default_user.avi  Pipfile  alt.py  alt.spec  avRec.py  avRec.spec  backup.py  buffer.py  clean_calibration.py  gaze_module.py  manager.py  pyproject.toml  rc1.py  rc2.py  record.py  temp_video.avi  temp_video2.avi  untils.py
