[tool.poetry]
name = "eyetracker-zms"
version = "0.1.0"
description = ""
authors = ["stalkcomrade <stanislavpoznyakof@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.2"
tobii-research = "^1.9.0"
opencv-python = "^4.5.3"
PyAudio = {version = "^0.2.11", markers = "sys_platform == 'darwin'" }
Wave = "^0.0.2"
mss = "^6.1.0"
python-lsp-server = {extras = ["all"], version = "^1.2.3"}
Pillow = "^8.3.2"
imutils = "^0.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
